--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,10 @@
         <div class="center text-big bold">
             Hi! Hershey, Wershey woo here.
         </div>
+        <br>
+        <div class= "para" >
+            Started from the bottom now we <b>HERE!</b>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
