--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
         </div>
         <br>
         <div class= "para" >
-            Started from the bottom now we <b>HERE!</b>
+            Started from the bottom now we <b>HERE!</b>, still :(
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
