[imad-console] Updates a-1.html

--- a/a-1.html
+++ b/a-1.html
@@ -1,9 +1,9 @@
 <html>
-<h1>
-This is Article 1
-</h1>
-<br>
-  <p>
-  This is where we are <b>are</b> coming from.
-  </p>
+<head>
+    <title>IMAD | Article - 1</title>
+</head>
+<body>
+    <a href = "/">Home</a>
+    </hr>
+</body>
 </html>
