[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,12 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
+        <div>
+            <a href ="/a-1">Article 1</a>
+            </div>
+            </hr>
+            <br>
+                <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
