[imad-console] Updates a-1.html

--- a/a-1.html
+++ b/a-1.html
@@ -1,10 +1,31 @@
 <html>
-<head>
-    <title>IMAD | Article - 1</title>
-</head>
-<body>
-    <a href = "/">Home</a>
+    <title>
+        IMAD | Article-1 
+    </title>
     <hr/>
-    <h3>Article 1</h3>
-</body>
+    <body>
+        <div>
+            <a href ="/">Home</a> 
+            |
+            <a href ="/a-2">Article-2</a>
+            |
+            <a href = "/a-3">Article-3</a>
+        </div>
+        <hr/>
+        <div>
+            <h2>Article 1</h2>
+        </div>
+        <div>
+            <b>Date:</b>25/09/2017
+        </div>
+        <div>
+            <p>This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.
+            </p>
+            <p>This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.
+            </p>
+            <p>This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.This is the content for my 1st page.
+            </p>
+        </div>
+        
+    </body>
 </html>
