--- a/a-3.html
+++ b/a-3.html
@@ -1,2 +1,33 @@
 <html>
+    <title>
+        IMAD | Article-3 
+    </title>
+    <body>
+        <div>
+            <a href ="/">Home</a> 
+            |
+            <a href ="/a-1">Article-1</a>
+            |
+            <a href = "/a-2">Article-2</a>
+        </div>
+        <hr/>
+        <div>
+            <h2>Article 2</h2>
+        </div>
+        <div>
+            <b>Date:</b>25/09/2017
+        </div>
+        <div>
+            <p>
+                This is the content for my 2nd page This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.
+            </p>
+            <p>
+                This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.
+            </p>
+            <p>
+                This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.
+            </p>
+        </div>
+        
+    </body>
 </html>
