[imad-console] Updates a-3.html

--- a/a-3.html
+++ b/a-3.html
@@ -11,7 +11,8 @@
             <a href = "/a-2">Article-2</a>
         </div>
         <hr/>
-        <div>
+        <div class ="body">
+            <div>
             <h2>Article 3</h2>
         </div>
         <div>
@@ -28,6 +29,7 @@
                 This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.
             </p>
         </div>
-        
+        </div>
+
     </body>
 </html>
