[imad-console] Updates a-3.html

--- a/a-3.html
+++ b/a-3.html
@@ -11,7 +11,7 @@
             <a href = "/a-2">Article-2</a>
         </div>
         <hr/>
-        <div class ="body">
+        <div class ="container">
             <div>
             <h2>Article 3</h2>
         </div>
