--- a/a-3.html
+++ b/a-3.html
@@ -2,6 +2,9 @@
     <title>
         IMAD | Article-3 
     </title>
+    <style>
+        .body{ max-width: 800px; }
+    </style>
     <body>
         <div>
             <a href ="/">Home</a> 
