[imad-console] Updates a-3.html

--- a/a-3.html
+++ b/a-3.html
@@ -3,7 +3,7 @@
         IMAD | Article-3 
     </title>
     <style>
-        .body{ max-width: 800px; }
+        .container{ max-width: 800px; }
     </style>
     <body>
         <div>
