--- a/a-3.html
+++ b/a-3.html
@@ -1,13 +1,15 @@
 <html>
-    <title>
-        IMAD | Article-3 
-    </title>
-    <style>
-        .container { 
-            max-width: 800px; 
-            
-        }
-    </style>
+    <head>
+        <title>
+            IMAD | Article-3 
+        </title>
+        <style>
+            .container { 
+                max-width: 800px; 
+            }
+        </style>
+    </head>
+    
     <body>
         <div>
             <a href ="/">Home</a> 
