--- a/a-3.html
+++ b/a-3.html
@@ -5,7 +5,8 @@
         </title>
         <style>
             .container { 
-                max-width: 800px; 
+                max-width: 800px;
+                padding:auto;
             }
         </style>
     </head>
