[imad-console] Updates a-3.html

--- a/a-3.html
+++ b/a-3.html
@@ -6,7 +6,8 @@
         <style>
             .container { 
                 max-width: 800px;
-                padding:auto;
+                margin:0 auto;
+                font: grey;
             }
         </style>
     </head>
