[imad-console] Updates a-3.html

--- a/a-3.html
+++ b/a-3.html
@@ -8,6 +8,7 @@
                 max-width: 800px;
                 margin:0 auto;
                 font: grey;
+                font: san-serif;
             }
         </style>
     </head>
