[imad-console] Updates a-3.html

--- a/a-3.html
+++ b/a-3.html
@@ -24,10 +24,8 @@
         <hr/>
         
          <div class ="container">
-            <div>
+            <di class = "title">
             <h2>Article 3</h2>
-            </div>
-            <div>
                 <b>Date:</b>25/09/2017
             </div>
             <hr/>
