[imad-console] Updates a-2.html

--- a/a-2.html
+++ b/a-2.html
@@ -1,33 +1,47 @@
 <html>
-    <title>
-        IMAD | Article-2 
-    </title>
+    <head>
+        <title>
+            IMAD | Article-3 
+        </title>
+        <style>
+            .container { 
+                max-width: 800px;
+                margin:0 auto;
+                font: grey;
+                font: san-serif;
+            }
+        </style>
+    </head>
+    
     <body>
         <div>
             <a href ="/">Home</a> 
             |
             <a href ="/a-1">Article-1</a>
             |
-            <a href = "/a-3">Article-3</a>
+            <a href = "/a-2">Article-2</a>
         </div>
         <hr/>
-        <div>
-            <h2>Article 2</h2>
-        </div>
-        <div>
-            <b>Date:</b>25/09/2017
-        </div>
-        <div>
-            <p>
-                This is the content for my 2nd page This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.
-            </p>
-            <p>
-                This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.
-            </p>
-            <p>
-                This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.This is the content for my 2nd page.
-            </p>
-        </div>
         
+         <div class ="container">
+            <di class = "title">
+            <h2>Article 3</h2>
+                <b>Date:</b>25/09/2017
+            </div>
+            <hr/>
+            <div>
+                <p>
+                    This is the content for my 3rd page. This is the content for my 3rd page. This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.
+                </p>
+                <p>
+                    This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.
+                </p>
+                <p>
+                    This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.This is the content for my 3rd page. This is the content for my 3rd page.
+                </p>
+            </div>
+            <hr/>
+        </div>
+
     </body>
 </html>
