--- a/a-3.html
+++ b/a-3.html
@@ -26,8 +26,8 @@
          <div class ="container">
             <div>
             <h2>Article 3</h2>
-            <b>Date:</b>25/09/2017
-        ````</div>
+            <b>Date:</b> 25/09/2017
+            </div>
             <hr/>
             <div>
                 <p>
