[imad-console] Updates a-2.html

--- a/a-2.html
+++ b/a-2.html
@@ -24,7 +24,7 @@
         <hr/>
         
          <div class ="container">
-            <di class = "title">
+             <div>
             <h2>Article 2</h2>
                 <b>Date:</b>25/09/2017
             </div>
