[imad-console] Updates a-2.html

--- a/a-2.html
+++ b/a-2.html
@@ -7,14 +7,15 @@
             .container { 
                 max-width: 800px;
                 margin:0 auto;
-                font: grey;
+                color: grey;
                 font: san-serif;
             }
         </style>
     </head>
     
     <body>
-        <div>
+        <div class ="container">
+            <div>
             <a href ="/">Home</a> 
             |
             <a href ="/a-1">Article-1</a>
@@ -42,6 +43,8 @@
             </div>
             <hr/>
         </div>
+        </div>
+        
 
     </body>
 </html>
