--- a/a-2.html
+++ b/a-2.html
@@ -8,7 +8,7 @@
                 max-width: 800px;
                 margin:0 auto;
                 color: grey;
-                font: san-serif;
+                font-family: san-serif;
             }
         </style>
     </head>
