--- a/a-1.html
+++ b/a-1.html
@@ -6,10 +6,13 @@
         
         <style>
             .container { 
-                max-width: 800px;
-                margin:0 auto;
-                color: grey;
-                font-family: sans-serif;
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #4a4444;
+                    font-family: sans-serif;
+                    padding-top: 40px;
+                    padding-left: 10px;
+                    padding-right: 10px;
             }
         </style>
     </head>
