--- a/a-1.html
+++ b/a-1.html
@@ -3,18 +3,7 @@
         <title>
         IMAD | Article-1 
         </title>
-        
-        <style>
-            .container { 
-                    max-width: 800px;
-                    margin: 0 auto;
-                    color: #4a4444;
-                    font-family: sans-serif;
-                    padding-top: 40px;
-                    padding-left: 10px;
-                    padding-right: 10px;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="/style.css">    
     </head>
     
     <body>
