[imad-console] Updates a-1.html

--- a/a-1.html
+++ b/a-1.html
@@ -3,7 +3,7 @@
         <title>
         IMAD | Article-1 
         </title>
-        <link rel="stylesheet" type="text/css" href="style.css">    
+        <link rel="stylesheet" type="text/css" href="ui/style.css">    
     </head>
     
     <body>
