--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
         <div>
             <a href ="/a-1">Article 1</a>
             </div>
-                <div class="center">
+                <div class="center" id = "cent">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
