--- a/ui/index.html
+++ b/ui/index.html
@@ -7,11 +7,11 @@
         <div>
             <a href ="/a-1">Article 1</a>
             </div>
-                <div class="center" id = "cent">
+                <div class="center" >
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="center text-big bold" id = "cent">
             Hi! Hershey, Wershey woo here.
         </div>
         <br>
