[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,11 +4,9 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div>
-            <a href ="/a-1">Article 1</a>
-            </div>
-                <div class="center" id = "madi" >
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class = "container">
+            <div class="center" id = "madi" >
+            <img src="https://pbs.twimg.com/profile_images/1491160041/dmgtc_400x400.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold" id = "cent">
@@ -18,6 +16,8 @@
         <div class= "para" >
             Started from the bottom now we <b>HERE!</b>, still :(
         </div>
+        </div>
+                
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
