[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,17 +8,15 @@
             <div class="center" id = "madi" >
             <img src="https://pbs.twimg.com/profile_images/1491160041/dmgtc_400x400.jpg" class="img-medium"/>
         </div>
-        <br>
-        <div class="center text-big bold" id = "cent">
-            Hi! Hershey, Wershey woo here.
+        <hr/>
+        <div>
+            Hi, my name is.
         </div>
-        <br>
-        <div class= "para" >
-            Started from the bottom now we <b>HERE!</b>, still :(
+        <hr/>
+        <div>
+            <b>Professional:</b> I work at Hasura.
         </div>
+        <hr/>
         </div>
-                
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
     </body>
 </html>
