[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,11 +10,15 @@
         </div>
         <hr/>
         <div>
-            Hi, my name is.
+            <br>
+                Hi, my name is Harsha Madhavan
+            <br>                
         </div>
         <hr/>
         <div>
+            <br>
             <b>Professional:</b> I work at Hasura.
+            <br>
         </div>
         <hr/>
         </div>
