[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -30,6 +30,15 @@
             
             <div class = "footer">
                 When I click on this <button id="counter">Increment</button>, I should get the count <span id="count">0</span>
+                <br/>
+                <input type = "text" id = "name" placeholder="name"></input>
+                <input type = "submit" value = "Submit"></input>
+                <ul>
+                    <li>Name1:</li>
+                    <li>Name2:</li>
+                    <li>Name3:</li>
+                </ul>
+                
              </div>  
         </div>
     </body>
