--- a/ui/index.html
+++ b/ui/index.html
@@ -42,5 +42,8 @@
                 
              </div>  
         </div>
+        <script type = "text/javascript" src="/ui.main.js">
+            
+        </script>
     </body>
 </html>
