[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -29,7 +29,7 @@
             <hr/>
             
             <div class = "footer">
-                When I click on this <button id="counter">Increment</button>, I should get the count <span id="count"></span>
+                When I click on this <button id="counter">Increment</button>, I should get the count <span id="count">0</span>
                 <hr/>
                 <h3>Enter Names:</h3>
                 <input type = "text" id = "name" placeholder="name"></input>
